<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWeatherPlugin</string>
    <!-- 
    	The following strings needs to be defined in order for the Plugin to function.
    -->
    <string name="pluginname">MyWeatherPlugin</string>
    <string name="intent_preferences">com.udav.extras.liveview.plugins.myweather.PREFERENCES</string>
    <string name="intent_service">com.udav.extras.liveview.plugins.myweather.myweatherplugin</string>
    <string name="application_description">Extends:com.sonyericsson.extras.liveview</string>
    
    <!-- Current weather display -->
	<string name="update">Update:</string>
	<string name="wind">Wind:</string>
	
	<!--  Weather forecast display-->
	<string name="night">Night</string>
	<string name="day">Day</string>
	<string name="pressure">mmHg</string>
	<string name="windSpeed">m/s</string>
    
    <!-- Preferences -->
    <string name="update_weather">Update</string>
    <string name="update_weather_sum">update weather</string>
    <string name="upd_int_title">Update interval</string>
    <string name="upd_int_sum">Input interval in minutes</string>
    <string name="city">City</string>
    <string name="city_sum">Select your city</string>
    <string name="number_of_days">Number of days</string>
    <string name="number_of_days_sum">Choose to display how many days weather forecast</string>
</resources>
