<PreferenceScreen	xmlns:android="http://schemas.android.com/apk/res/android"	
					android:title="@string/pluginname">
	<CheckBoxPreference 
	    android:key="weatherUpdate"
	    android:title="@string/update_weather"
	    android:summary="@string/update_weather_sum"
	    android:order = "0"
	    android:defaultValue = "true"/>
	<EditTextPreference
		android:key="updateIntPref"
	    android:title="@string/upd_int_title" 
	    android:summary="@string/upd_int_sum"
	    android:inputType="number"
	    android:defaultValue="15"
	    android:order="1"
	/>
	<ListPreference
	    android:key="numberOfDays"
	    android:title="@string/number_of_days"
	    android:summary="@string/number_of_days_sum"
	    android:entries="@array/listArray"
	    android:entryValues="@array/listArray"
	    android:defaultValue="7"
	    android:order="3"
	/>
</PreferenceScreen>